--- a/Encrypted.EmailApp/Web.config
+++ b/Encrypted.EmailApp/Web.config
@@ -12,6 +12,9 @@
     
     <add key="EncryptionKeySalt" value="IhorTest" />
   </appSettings>
+  <connectionStrings>
+    <add name="MySqlConnection" connectionString="server=dxdya1-cluster.cluster-cl0mpr0rdb8o.us-west-2.rds.amazonaws.com;port=3306;user id = Ihor;password = IH1599;database = encryptyx;allowuservariables = True;Convert Zero Datetime=True;Keepalive = 0;ConnectionTimeout = 15;" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
