--- a/Encrypted.EmailApp/Encrypted.EmailApp.csproj
+++ b/Encrypted.EmailApp/Encrypted.EmailApp.csproj
@@ -51,11 +51,24 @@
       <HintPath>..\packages\Autofac.Mvc5.4.0.2\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Google.Protobuf, Version=3.5.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Protobuf.3.5.1\lib\net45\Google.Protobuf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.11\lib\net452\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.ComponentModel" />
+    <Reference Include="System.Configuration.Install" />
+    <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -115,6 +128,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Domain\EmailMessage.cs" />
     <Compile Include="Encryption\AesEncrypt.cs" />
     <Compile Include="Encryption\DesEncrypt.cs" />
     <Compile Include="Encryption\MailMessageEncryption.cs" />
@@ -125,6 +139,9 @@
     <Compile Include="Models\ViewMessageIndexModel.cs" />
     <Compile Include="Models\ViewMessagesIndexModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EmailMessageMemoryRepository.cs" />
+    <Compile Include="Repositories\EmailMessageRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IEmailMessageRepository.cs" />
     <Compile Include="Services\EmailMessageService.cs" />
     <Compile Include="Services\Interfaces\IEmailMessageService.cs" />
     <Compile Include="Utils\Configuration.cs" />
@@ -150,16 +167,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EmailApp.Domain\EmailApp.Domain.csproj">
-      <Project>{8C73D7F3-AFC4-4508-9BC9-EB79293C1B47}</Project>
-      <Name>EmailApp.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EmailApp.Repositories\EmailApp.Repositories.csproj">
-      <Project>{D256799A-9E6E-40EA-8006-C1DFF12375AF}</Project>
-      <Name>EmailApp.Repositories</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
